# GitMaestro

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  EVALUATION_REPORT.md  README.md  config.ablation-v1.yaml  config.ablation-v2.yaml  config.ablation-v3.yaml  config.benchmark.yaml  config.hybrid.yaml  config.ollama.yaml  config.yaml  pyproject.toml  render.yaml
maestro/: __init__.py  __main__.py
playground/buggy_orders/: README.md  issue_body.md  order_total.py  test_order_total.py
remote/: README.md
remote/queue_server/: app.py  db.py  requirements.txt  ui.py
remote/worker/: main.py
runs/: README.md
runs/20260520-182346-f636b398/: decision_trace.md  events.jsonl  github_summary.md  patch.diff  pr_draft.md  score.json  test_report.md
runs/20260520-182920-4cf846e4/: decision_trace.md  events.jsonl  issue_snapshot.md  pr_draft.md  (+2 more)
scripts/: OllamaPath.ps1  create_github_issue.py  demo_scenarios.py  evaluate_runs.py  ollama_pull_hardware_rtx3060_12gb.ps1  ollama_pull_hardware_rtx3060_12gb.sh  ollama_pull_qwen.ps1  ollama_pull_qwen.sh  ollama_pull_qwen_nextgen.ps1  ollama_pull_qwen_nextgen.sh  run_benchmark_multi.ps1
tests/: test_agentic_fatigue.py  test_already_resolved_feedback.py  test_github_issue_comment.py  test_issue_resolved_policy.py  test_llm_factory.py  test_model_routing.py  test_ollama_provider.py  test_orchestrator_dry_run.py  test_patch_scope.py  test_patch_strategy.py  test_patch_utils.py  test_remote_queue.py  test_score_routing.py  test_scout_target_tests.py  test_surgeon_fallback.py  test_test_feedback.py  test_test_runner_scope.py
(+145 files in other folders)
