[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmaestro"
version = "0.1.0"
description = "GitHub Issue Orchestra (GitMaestro) MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
